test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/double_declarator.plx
pub fn main(none) i32 {
    # array size must be an integer
    x: [2.0]i32;
}
